# Tribal-knowledge-extractor

./: .cta.json  package.json  pnpm-lock.yaml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/src/tribal_knowledge/: __init__.py  cli.py  discovery.py  ingestion.py  models.py  resolver.py  serialization.py
backend/src/tribal_knowledge/benchmark/: __init__.py  runner.py
backend/src/tribal_knowledge/embeddings/: __init__.py  chunker.py  store.py
backend/src/tribal_knowledge/evaluation/: __init__.py  evaluator.py  gap_filler.py  llm_judge.py  models.py  scorer.py
backend/src/tribal_knowledge/graph/: __init__.py  analysis.py  builder.py
backend/src/tribal_knowledge/parser/: __init__.py  base.py  go_parser.py  java_parser.py  javascript_parser.py  python_parser.py  rust_parser.py  typescript_parser.py
backend/src/tribal_knowledge/pipeline/: __init__.py  graph.py  helpers.py  llm.py  output.py  state.py  (+2 more)
backend/tests/: conftest.py  test_analyst.py  test_critic.py  test_evaluation_scorer.py  test_explorer.py  test_fixer.py  test_gap_filler.py  test_go_parser.py  test_java_parser.py  test_pipeline_integration.py  test_reference_fixer.py  test_rust_parser.py  test_staleness_detector.py  test_writer.py
backend/tribal-knowledge-output/.tribal-knowledge/: analysis.json  extractions.json  knowledge_graph.json  manifest.json
backend/tribal-knowledge-output/context/: AGENTS.md  CONVENTIONS.md  OVERVIEW.md  backend-server.md  cicd-pipelines.md  dependency-index.md  desktop-application.md  marketing-website.md  quality-report.json  web-frontend.md
(+22 files in other folders)
